# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
gendiff/: __init__.py  arg_parser.py  consts.py  create_diff.py  diff.py  gendiff.py  read_data.py
gendiff/formatters/: __init__.py  format.py  json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py  main.py
gendiff/test/: test.py
tests/: test_diff.py
tests/fixtures/: file1.json  file1.yml  output.json  output.yml  output_for_yml.json  test_plain  test_plain_json  test_stylish  test_stylish_json
